# sage-amms

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  PUBLISHING.md  QUICKSTART.md  README.md  SAGE_INTEGRATION.md  build.sh  pyproject.toml  sage-amms.chatmod.md  setup.py  test.sh
.github/: COPILOT_INSTRUCTIONS.md
.github/chatmodes/: sage-amms.chatmode.md
.github/workflows/: build.yml  codeql.yml  publish.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md
sage/: __init__.py
sage/libs/: __init__.py
sage/libs/amms/: __init__.py
sage/libs/amms/implementations/: CMakeLists.txt
sage/libs/amms/implementations/cmake/: FindCuda.cmake  FindTorch.cmake  default.cmake  macros.cmake
sage/libs/amms/implementations/src/Streaming/: TimeStamper.cpp
sage/libs/amms/wrappers/: __init__.py  pyamm.py
scripts/: README.md  build.sh  test.sh
tests/: __init__.py  conftest.py  test_imports.py  test_structure.py
