[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "cmake>=3.14",
    "pybind11>=2.10.0",
    "torch>=2.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "isage-amms"
version = "0.1.0"
description = "Approximate Matrix Multiplication algorithms with unified interface"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "IntelliStream Team", email = "shuhao_zhang@hust.edu.cn" }
]
maintainers = [
    { name = "IntelliStream Team", email = "shuhao_zhang@hust.edu.cn" }
]
keywords = [
    "approximate-matrix-multiplication",
    "amm",
    "sketching",
    "sampling",
    "quantization",
    "machine-learning",
    "linear-algebra",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8,<3.13"
dependencies = [
    "numpy>=1.20.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
cuda = [
    "torch>=2.0.0",  # CUDA-enabled PyTorch
]
amms = [
    "isage-amms>=0.1.0",
]
full = [
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/intellistream/sage-amms"
Documentation = "https://github.com/intellistream/sage-amms#readme"
Repository = "https://github.com/intellistream/sage-amms"
"Bug Tracker" = "https://github.com/intellistream/sage-amms/issues"
"Parent Project" = "https://github.com/intellistream/SAGE"

[tool.setuptools]
packages = { find = { where = ["."], include = ["sage*"] } }
zip-safe = false

[tool.setuptools.package-data]
"sage.libs.amms" = ["py.typed", "*.so", "*.pyd", "*.dll"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["sage"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
